<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="?actionBarSize"
            android:layout_height="?actionBarSize"
            android:src="@drawable/upbutton"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:scaleType="center"
            android:clickable="true"
            android:contentDescription="@null" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/iv_back"
            android:layout_centerVertical="true"
            android:text="@string/setting_refresh_rate"
            android:textColor="@color/white"
            android:textSize="@dimen/sp20"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp5"
        android:background="@drawable/toolbar_shadow"/>

    <TextView
        android:id="@+id/setting_refresh_rate_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp10"
        android:textSize="@dimen/dp16"
        android:text="@string/setting_refresh_rate_summary"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp10"
        android:padding="@dimen/dp8"
        android:background="@drawable/setting_edittext_background"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/et_refresh_rate"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@null"
            android:maxLength="3"
            android:inputType="phone"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:text=""/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/dp16"
            android:text="@string/setting_refresh_rate_unit"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/setting_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp10"
        android:background="@drawable/settting_btn">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="@dimen/dp10"
            android:text="@string/setting_btn"
            android:textColor="@color/white"
            android:textSize="@dimen/dp16" />
    </RelativeLayout>

</LinearLayout>