<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerlayout_activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kmjd.wcqp.single.zxh.MainActivity"
    tools:openDrawer="start">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <android.support.design.widget.AppBarLayout
                android:id="@+id/al_activity_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/ThemeOverlay.AppBarLayout"
                android:visibility="gone">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/tb_activity_main"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    app:popupTheme="@style/ThemeOverlay.ToolBar">

                </android.support.v7.widget.Toolbar>
            </android.support.design.widget.AppBarLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <android.support.v4.view.ViewPager
                    android:id="@+id/vp_activity_main"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                </android.support.v4.view.ViewPager>

            </LinearLayout>

        </android.support.design.widget.CoordinatorLayout>

        <RadioGroup
            android:id="@+id/rg_activity_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary99"
            android:orientation="horizontal"
            android:padding="@dimen/dp3">

            <RadioButton
                android:id="@+id/rb_help"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/rb_help_selector"
                android:gravity="center"
                android:text="@string/help"
                android:textAllCaps="false"
                android:textColor="@color/white"/>

            <RadioButton
                android:id="@+id/rb_tradingRecord"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/rb_tr_selector"
                android:gravity="center"
                android:text="@string/tradingRecord"
                android:textAllCaps="false"
                android:textColor="@color/white"/>

            <RadioButton
                android:id="@+id/rb_personalInformation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/rb_pi_selector"
                android:gravity="center"
                android:text="@string/personalInformation"
                android:textAllCaps="false"
                android:textColor="@color/white"/>
        </RadioGroup>
    </LinearLayout>
    <android.support.design.widget.NavigationView
        android:id="@+id/nv_activity_main"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/drawrlayout_head_activity_main"
        app:menu="@menu/drawrlayout_menu_activity_main"
        app:theme="@style/menuTextStyle"/>

</android.support.v4.widget.DrawerLayout>
